<resources>
    <string name="app_name">남산골한옥마을</string>

    <string-array name="languages_array">
        <item>한국어</item>
        <item>English</item>
        <item>日本語</item>
        <item>中文</item>
    </string-array>

    <!-- dialog -->
    <string name="bluetoothAlertMessage">자동전시안내를 이용하시려면 Bluetooth를 켜 주세요.</string>
    <string name="newItemAlertMessage">새로운 전시품이 발견되었습니다.</string>
    <string name="autoAlarmText">자동전시알림</string>
    <string name="showDetailText">상세보기</string>

    <!-- docent -->
    <string name="detail">상세보기</string>
    <string name="video">영상보기</string>
    <string name="audio">Audio</string>
    <string name="location">Location</string>
    <string name="new_docent">새로운 작품이 확인되었습니다.</string>

    <!-- home -->
    <string name="autoPlay">자동전시안내</string>
    <string name="category">마을 둘러보기</string>
    <string name="event">세시/행사</string>
    <string name="notice">알리는 말씀</string>
    <string name="question">문의하기</string>
    <string name="information">이용안내</string>

    <!-- question -->
    <string name="inputEmail">1. 이메일을 입력해주세요.</string>
    <string name="hintEmail">docent@docent.com</string>
    <string name="inputPhone">2. 전화번호를 입력해주세요.(ex.01012345678)</string>
    <string name="dash">-</string>
    <string name="hintPhone1">010</string>
    <string name="hintPhone2">1234</string>
    <string name="hintPhone3">5678</string>
    <string name="inputName">3. 성함을 입력해주세요.</string>
    <string name="hintName">홍길동</string>
    <string name="inputTitleContent">4. 제목과 내용을 입력해주세요.</string>
    <string name="hintTitle">제목</string>
    <string name="hintContent">내용</string>

    <!-- questionWriteDone -->
    <string name="questionSuccessTitle">문의완료</string>
    <string name="questionSuccessMessage">문의가 정상적으로 완료되었습니다.</string>
    <string name="questionFailTitle">문의실패</string>
    <string name="questionFailMessage">문의 전송에 실패하였습니다.</string>
    <string name="quesDone">확인</string>

    <!-- tutorial -->
    <string name="tutorialGuide">자동전시안내를 원하시면 버튼을 \'ON\'으로 설정해주세요.</string>

    <!-- splash -->
    <string name="splashTitle">Namsangol Hanok Village</string>

    <!-- download -->
    <string name="downloadWaiting">다운로드 대기중...</string>
    <string name="downloading">다운로드 중...</string>
    <string name="downloadComplete">다운로드 완료</string>
    <string name="downloadAlertMessage">이동통신망을 이용하여 콘텐츠 다운로드를 시작하면 별도의 데이터 통화료가 발생할 수 있습니다.</string>

    <!-- notice -->
    <string name="noResult">검색 결과가 없습니다.</string>
    <string name="searchMessage">검색어 입력</string>

    <!-- data connect -->
    <string name="request"> 인터넷이 연결되어 있지 않습니다. </string>
    <string name="serverConnected">서버 통신에 문제가 발생하였습니다.</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="wifi_disconnect">네트워크 연결 상태를 확인해 주시기 바랍니다.</string>

    <!-- info -->
    <string name="tab_text_1">관람안내</string>
    <string name="tab_text_2">오시는길</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
