<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/qusetion_write_LLlayout"
    tools:context=".Question.QuestionWriteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/question_register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <include
                layout="@layout/include_questionwrite_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.Toolbar>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/getScroll_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/inputEmail"
                    android:textColor="#000000" />


                <EditText
                    android:id="@+id/question_email_first_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/rectangle_edge_all"
                    android:hint="@string/hintEmail"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="7dp"
                    android:paddingStart="20dp"
                    android:textSize="15sp"

                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/inputPhone"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/question_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="25dp"
                        android:layout_marginStart="25dp"
                        android:background="@drawable/rectangle_edge_all"
                        android:hint="@string/hintPhone"
                        android:inputType="phone"
                        android:paddingEnd="7dp"
                        android:paddingStart="20dp"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/inputName"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/question_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="25dp"
                        android:layout_marginStart="25dp"
                        android:background="@drawable/rectangle_edge_all"
                        android:gravity="center_vertical"
                        android:hint="@string/hintName"
                        android:inputType="text"
                        android:paddingEnd="7dp"
                        android:paddingStart="20dp"
                        android:textSize="15sp"/>
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/inputTitleContent"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/question_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/rectangle_edge_all"
                    android:gravity="center_vertical"
                    android:hint="@string/hintTitle"
                    android:inputType="text"
                    android:paddingEnd="7dp"
                    android:paddingStart="20dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/question_content_layout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle_edge_all">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="false">

                    <EditText
                        android:focusableInTouchMode="true"
                        android:id="@+id/question_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:minLines="4"
                        android:baselineAligned="false"
                        android:gravity="top"
                        android:hint="@string/hintContent"
                        android:inputType="textMultiLine"
                        android:isScrollContainer="true"
                        android:paddingBottom="5dp"
                        android:paddingStart="20dp"
                        android:paddingTop="5dp"
                        android:textSize="15sp" />

                </android.support.v4.widget.NestedScrollView>


            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</LinearLayout>
